# image_to_csv

./: .gitignore  README.md  pyproject.toml
image_to_csv/: __init__.py  __main__.py  converter.py
